Use current tab URL

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 210px;
   pointer-events: none;
 }
 
@@ -12,11 +12,24 @@
     animation: App-logo-spin infinite 20s linear;
   }
 } */
+#predict{
+  background-color: white;
+  margin-top: 20px;
+  margin: 20px, 20px, 10px, 20px;
+}
+#result{
+  margin: 10px, 0px, 30px, 0px;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
 .App-header {
+  /* background-color: white; */
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  column-gap: 10px;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
