--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
 .App-header {
   text-align: center;
   height: 320px;
-  display: grid;
-  grid-column: 100px 220px;
   padding: 0%;
   margin: 0px;
   align-items: center;
   justify-content: center;
-  /* flex-direction: column; */
-  /* width: 200px; */
 }
 
 .App-logo {
@@ -16,18 +12,14 @@
   pointer-events: none;
   align-self: center;
   justify-self: center;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 #text{
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
-  padding-bottom: 20%;
+  padding: 20% 0% 10% 0%;
 }
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
+
 #xbody{
   display: grid;
   grid-column:  80px 70px 70px;
@@ -39,43 +31,20 @@
   background-color:#ff4c68;
   color: white;
   width: 350px;
-  height: 100%;
-  margin: 0%;
+  height: 150px;
+  margin: 0px;
 
 }
-#predict{
-  /* background-color: white; */
-  /* margin-top: 20px; */
-  /* margin: 20px, 20px, 10px, 20px; */
-  /* border-bottom: 10px; */
-  /* border-top: 20px; */
-  /* width: 80%; */
 
-}
 #result{
-  /* border-bottom: 20px; */
-  /* border: 40px; */
-  /* border-top: 20px; */
+
   padding-bottom: 15%;
-  padding-top: 10%;
-  /* margin: 10px, 0px, 30px, 0px; */
-  /* font-weight: bold; */
+
   font-weight: 400;
   color: black;
   font-size: 23px;
 }
-/* .App-header {
-  background-color: white;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
 
-  /* background-color: #282c34; */
 .App-link {
   color: #61dafb;
 }
